# austin-ma-tracker

./: .gitignore  README.md  app.py  pyproject.toml
analysis/: austin-re-deepdive.typ  classified_deals.csv  plots.py  segment.py
data/: extract.py  ingest_rss.py  prefilter.py  seed_deals.py  sources.py
paper/: austin-ma-tracker.typ  blog-post.md  lib.typ
src/: aggregate.py  plots.py
