[project]
name = "dealiq"
version = "0.1.0"
description = "Austin MSA mid-market M&A activity tracker."
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "streamlit>=1.36",
  "matplotlib>=3.8",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
